# halvix

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PROJECT_CONTEXT.md  README.md  pyproject.toml
.github/workflows/: pages.yml  tests.yml
docs/: DATA_SOURCES.md  DEPLOYMENT.md  EDGE_CASES.md  PROJECT_CONTEXT.md  TOTAL2_CALCULATION.md  TUTORIAL.md
site/: charts.html  index.html
site/charts/: btc_halving_cycles.html  btc_usd_normalized.html  total2_composition.html  total2_composition_2014_09.html  total2_composition_2014_10.html  total2_composition_2014_11.html  total2_composition_2014_12.html  total2_composition_2015_01.html  total2_composition_2015_02.html  total2_composition_2015_03.html  total2_composition_2015_04.html  total2_composition_2015_05.html  total2_composition_2015_06.html  total2_composition_2015_07.html  total2_composition_2015_08.html  total2_composition_2015_09.html  total2_composition_2015_10.html  total2_composition_2015_11.html  total2_composition_2015_12.html  total2_composition_2016_01.html  total2_composition_2016_02.html  total2_composition_2016_03.html  total2_composition_2016_04.html  total2_composition_2016_05.html  total2_composition_2016_06.html  total2_composition_2016_07.html  total2_composition_2016_08.html  total2_composition_2016_09.html  total2_composition_2016_10.html  total2_composition_2016_11.html  total2_composition_2016_12.html  total2_composition_2017_01.html  total2_composition_2017_02.html  total2_composition_2017_03.html  total2_composition_2017_04.html  total2_composition_2017_05.html  total2_composition_2017_06.html  total2_composition_2017_07.html  total2_composition_2017_08.html  total2_composition_2017_09.html  (+101 more)
src/: __init__.py  config.py  main.py
src/analysis/: __init__.py  filters.py
src/api/: __init__.py  coingecko.py  cryptocompare.py
src/data/: __init__.py  cache.py  fetcher.py  processor.py  symbol_mapping.py
src/utils/: __init__.py  logging.py
src/visualization/: __init__.py  charts.py
tests/: __init__.py  conftest.py  test_cache.py  test_coingecko.py  test_coingecko_integration.py  test_cryptocompare.py  test_cryptocompare_integration.py  test_fetcher.py  test_filters.py  test_processor.py  test_symbol_mapping.py  test_symbol_mapping_integration.py
