[tool.poetry]
name = "halvix"
version = "2025.12.3"
description = "Cryptocurrency price analysis relative to Bitcoin halving cycles"
authors = ["yohplala <yohplala@users.noreply.github.com>"]
readme = "README.md"
packages = [
    {include = "config.py", from = "src"},
    {include = "main.py", from = "src"},
    {include = "analysis", from = "src"},
    {include = "api", from = "src"},
    {include = "data", from = "src"},
    {include = "utils", from = "src"},
    {include = "visualization", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1"
numpy = "^2.0"
plotly = "^5.18"
scipy = "^1.14"
requests = "^2.31"
tqdm = "^4.65"
pyarrow = "^18.0"
tenacity = "^8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.0"
ruff = "^0.1"
ipython = "^8.0"
pre-commit = "^4.5.0"

[tool.poetry.scripts]
halvix = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["halvix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = "-v --tb=short"
